<resources>
    <string name="app_name">Plantier</string>
    <string name="profile">Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="signup">SignUp</string>
    <string name="login">SignIn</string>
    <string name="message_welcome_page">Want easy gardening? Become a member and enjoy the benefits, only at Plantier!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your data below, OK?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="copyright">© 2021 Plantier</string>
    <string name="message_main_page">Happy learning coding.</string>
    <string name="greeting">Welcome! \n%1$s</string>
    <string name="logout">Keluar</string>
    <string name="image_disease">Image of Disease</string>
    <string name="camera_button">Camera Button</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="disease">Disease</string>
    <string name="welcome_greeting">Hallo Planter!</string>
    <string name="signup_text">Don\'t have an account yet? Sign up now!</string>
    <string name="login_text">Already have an account? Let\'s Login!</string>
    <string name="atau">or</string>
    <string name="offer_text">Become a member and enjoy the benefits!</string>
    <string name="fab_camera">Floating Action Button of Camera</string>
    <string name="prevent">Prevent</string>
    <string name="disease_image">Disease Image</string>
    <string name="diseases">Diseases</string>
    <string name="nama_penyakit">Disease Name</string>
    <string name="delete_button">Delete Button</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="treatment">Treatment</string>
    <string name="prevent1">Control can be by using resistant varieties, such as Srikandi, Lamuru, and Gumarang. In addition, planting can be done simultaneously and carry out a period of time free from corn plants at least two weeks to one month each year. If there are already infected, eradication or total destruction can be carried out. For prevention, metalaxyl fungicides can also be used on plant seeds with a dose of 0.7 grams of active ingredient per kg of seed</string>
    <string name="prevent2">Control can be by using resistant varieties, such as Bima 1, Sukmaraga, and Palakka. If infected plants are seen, they must be eradicated immediately. Can also be given a fungicide with the active ingredients mancozeb and carbendazim.</string>
    <string name="desc1">Symptoms of this disease occur on the surface of the corn leaves which are white to yellowish followed by chlorotic stripes and another characteristic is that in the morning on the underside of the corn leaves there is a layer of white velvet. Downy mildew in maize causes systemic symptoms that extend to all parts of the plant and cause local symptoms. Plants infected with downy mildew at a young age usually do not form fruit, but if the infection occurs in older plants, fruit is still formed and generally stunted growth.</string>
    <string name="desc2">Symptoms of this disease occur when leaf spots appear yellowish green or reddish brown. When affected corn seedlings may wilt or die within 3–4 weeks. If the infected cobs will cause the seeds to be damaged and rotten, the cobs can even fall. Infection with this disease can be carried by wind or rain splashes and can cause the first infection of corn plants.</string>

    <string name="take_photo">take photo</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="preview">Preview</string>
    <string name="ambil_ulang">Retake</string>
    <string name="analysis">Analysis</string>
    <string name="nama_user">Uername</string>
    <string name="bookmark_back">Bookmark Back</string>
    <string name="email_user">Email User</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bright_mode">Bright Mode</string>
    <string name="button_setting">Button Setting</string>
    <string name="welcome">Welcome!</string>
    <string name="next_button">Next Button</string>
    <string name="corn_benefits">Benefits of Corn</string>
    <string name="lihat_selengkapnya">View more</string>
    <string name="appname">Plantier</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="brand_image">Brand Image</string>
    <string name="preview_background">Preview Background</string>
    <string name="back_button">Back Button</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="upload_button">Upload Button</string>
    <string name="username">Username</string>
</resources>