<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.analysis.AnalysisActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/ib_back_bookmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_dark_green"
            android:scaleType="centerCrop"
            android:background="@null"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/tv_title_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/green_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@color/white_green_gray"
        android:contentDescription="@string/preview_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="7dp"
            android:src="@drawable/ic_gallery"
            android:elevation="4dp"
            android:background="@color/green_light"
            android:contentDescription="@string/gallery_button" />

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_camera"
            android:elevation="4dp"
            android:background="@color/green_light"
            android:contentDescription="@string/camera_button" />

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="7dp"
            android:src="@drawable/ic_upload"
            android:elevation="4dp"
            android:background="@color/green_light"
            android:contentDescription="@string/upload_button" />
    </LinearLayout>
</LinearLayout>