<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_dark_green"
            android:scaleType="centerCrop"
            android:background="@null"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/tv_title_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/green_dark"
            android:layout_marginStart="130dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_foto_profi"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@color/green_dark"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ci_profil"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_user_light"
            app:civ_border_color="@color/white"
            app:civ_border_width="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_foto_profi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:background="@color/white_green_gray"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white_green_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_user"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white_green_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_user"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white_green_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_profil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:background="@color/white_green_gray"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white_green_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textSize="16sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/theme"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginStart="220dp"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white_green_gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_dark"
            android:text="@string/logout"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>