<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <include
        android:id="@+id/include_appbar"
        layout="@layout/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/include_profile"
        layout="@layout/layout_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/include_appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/benefitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corn_benefits"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_profile"/>

    <ImageButton
        android:id="@+id/ibNextBenefit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_next"
        android:scaleType="centerCrop"
        android:background="@null"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="@id/include_profile"
        app:layout_constraintTop_toTopOf="@id/benefitTextView"
        app:layout_constraintBottom_toBottomOf="@id/benefitTextView"
        android:contentDescription="@string/next_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/benefitRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/benefitTextView"
        tools:listitem="@layout/item_benefit" />

    <TextView
        android:id="@+id/diseaseVariantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diseases"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/benefitRecyclerView"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/diseaseRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diseaseVariantTextView"
        tools:listitem="@layout/item_disease"/>

</androidx.constraintlayout.widget.ConstraintLayout>