<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/diseaseImageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="center"
                android:contentDescription="@string/disease_image"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/diseaseTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/disease"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/diseaseImageView"
                tools:text="Disease" />

            <TextView
                android:id="@+id/diseaseDescTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text=""
                android:textSize="14sp"
                android:maxLines="3"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/diseaseTextView"
                tools:text="@tools:sample/lorem" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/green_light"
                android:text="@string/lihat_selengkapnya"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:drawableTint="@color/white"
                card_view:cornerRadius="10dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/diseaseDescTextView"
                tools:targetApi="m" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="vertical"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintGuide_percent="0.5"
                card_view:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>